--- a/gettingstarted_exercise.Rmd
+++ b/gettingstarted_exercise.Rmd
@@ -1,55 +1,26 @@
 ---
 title: "Gettingstarted"
 author: "Shiwani"
-date: "1/22/2020"
-output: html_document
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output:html_document: default
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-# R calls in R markdown go within sections delimited by three backticks (`, the character just to the left of the 1 on US English keyboards; YMMV on other keyboards). For R code to execute, you must include {r} after the first three.
-
-```{r}
-2+3
-library(ape)
-plot(rcoal(5))
-```
   
-# Take the following lines and do what they say
-# Make this line bold
-text(1, "make this line bold", font=2)
+Make this line bold
+Make this line **bold**
 
-# MAKE THE WORD ITALIC ITALICIZED
-text(1, "make the word italic italicized", font=3)
+Make the word italic italicized
+Make the word *italic* italicized
 
-# MAKE THE FOLLOWING R CODE CREATE A PLOT IN THIS DOCUMENT
-plot(density(rnorm(1000)))
-
-# Edit this document so that this code all runs properly. You can create the final document by doing `rmarkdown::render("gettingstarted_exercise.Rmd")` in R or hitting the knit button in Rstudio.
-# Experience with coding.
+Make the plot in the document
 ```{r}
-{GetHowManyTrees <- rtree(n=10)
-  plot(GetHowManyTrees, edge.width = 1)}
+plot(density(rnorm(1000)))
+```
+
+Experience with coding.
+```{r}
+{
+  GetHowManyTrees <- rtree (n=10, rooted=TRUE, tip.label = NULL)
+  plot(GetHowManyTrees)
+  }
   
 ```
